<resources>
    <string name="app_name">Weatherlens</string>
    <string name="getstarted">GET STARTED</string>
    <string name="loginlandingbtn">Login</string>
    <string name="registerlandingbtn">register</string>
    <string name="skipfornow">Skip for now</string>
    <string name="register">Register Here</string>
    <string name="welcome">Welcome Onboard</string>
    <string name="Registerhere">Register Here</string>
    <string name="welcomeabord">Welcome Abord!</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="enterloginmobile">Enter Mobile Number</string>
    <string name="entermobile">Enter Mobile Number</string>
    <string name="enteremail">Enter Email</string>
    <string name="enterpassword">Enter Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="signupbtn">Sign Up</string>
    <string name="or">Or</string>
    <string name="loginhere">Login Here</string>
    <string name="Loginhere">Login Here</string>
    <string name="welcomeback">Welcome Back</string>
    <string name="userdashboard">User Dashboard</string>
    <string name="selectprovince">Select Your Province</string>
    <string name="central">Central</string>
    <string name="eastern">Eastern</string>
    <string name="northcentral">North Central</string>
    <string name="northen">Northern</string>
    <string name="northwest">North West</string>
    <string name="sabaragamuwa">Sabaragamuwa</string>
    <string name="southern">Southern</string>
    <string name="uva">Uva</string>
    <string name="western">Western</string>
    <string name="distprov">- Central Province -</string>
    <string name="selectdistrict">Select The District</string>
    <string name="kandy">Kandy</string>
    <string name="matale">Matale</string>
    <string name="nuwaraeliya">Nuwara Eliya</string>
    <string name="analystdash">Analyst Dashboard</string>
    <string name="addweathertv">Add Weather Details</string>
    <string name="enterdate">Enter Date</string>
    <string name="rainprob">Rain Probability(%)</string>
    <string name="wind">Wind(km/h)</string>
    <string name="humidity">Humidity(%)</string>
    <string name="submitbtn">Submit</string>
    <string name="addhazardtv">Add Hazard Details</string>
    <string name="haztitle">Title</string>
    <string name="descriptionhaz">Description</string>
    <string name="typehaz">Type</string>
    <string name="weatherfeedback">Weather Lens App Feedback</string>
    <string name="feedbackquote">Your opinion is important to us. This way we can keep improving our app</string>
    <string name="satisquote">Your overall satisfaction of the app out of 10</string>
    <string name="zero">0</string>
    <string name="onetoten">1 - 10</string>
    <string name="singleweathertitle">Central Province</string>
    <string name="singleweathertitle2">Kandy</string>
    <string name="hazardtitle">Hazard Details</string>
    <string name="viewhazards">View All Hazards</string>
    <string name="updhaz">Update Hazard</string>
    <string name="updtitle">Title</string>
    <string name="upddate">Date</string>
    <string name="accsettings">Account Settings</string>
    <string name="changepass">Change Password</string>
    <string name="oldpass">Old Password</string>
    <string name="newpass">New Password</string>
    <string name="confpass">Confirm Password</string>
    <string name="btn_save">Save</string>
    <string name="profile">Profile</string>
    <string name="profname">Pasindu Gunasekara</string>
    <string name="profemail">pasindu@gmail.com</string>
    <string name="profnum">0775568565</string>
    <string name="profeditbtn">EDIT</string>
    <string name="addfback">Add Feedback</string>
    <string name="accountsetprof">Account Settings</string>
    <string name="aboutprof">About Application</string>
    <string name="logout">Logout</string>
    <string name="editprof">Edit Profile</string>
    <string name="profdet">Profile Details</string>
    <string name="fname">First Name</string>
    <string name="lastname2">Last Name</string>
    <string name="email2">Email Address</string>
    <string name="phone2">Phone Number</string>
    <string name="save">Save</string>
</resources>