<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

  <ImageView
      android:id="@+id/imageView7"
      android:layout_width="738dp"
      android:layout_height="892dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.501"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.993"
      app:srcCompat="@drawable/background" />

  <EditText
      android:id="@+id/editTextTextPersonName2"
      android:layout_width="275dp"
      android:layout_height="38dp"
      android:layout_marginTop="8dp"
      android:ems="10"
      android:hint="@string/lastname"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

  <EditText
      android:id="@+id/editTextTextPersonName3"
      android:layout_width="275dp"
      android:layout_height="38dp"
      android:layout_marginTop="8dp"
      android:ems="10"
      android:hint="@string/enteremail"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

  <EditText
      android:id="@+id/editTextTextPersonName4"
      android:layout_width="275dp"
      android:layout_height="38dp"
      android:layout_marginTop="8dp"
      android:ems="10"
      android:hint="@string/entermobile"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

  <EditText
      android:id="@+id/editTextTextPersonName5"
      android:layout_width="275dp"
      android:layout_height="38dp"
      android:layout_marginTop="8dp"
      android:ems="10"
      android:hint="@string/enterpassword"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />

  <EditText
      android:id="@+id/editTextTextPersonName6"
      android:layout_width="275dp"
      android:layout_height="38dp"
      android:layout_marginTop="8dp"
      android:ems="10"
      android:hint="@string/confirmpassword"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />

  <TextView
      android:id="@+id/textView4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="60dp"
      android:fontFamily="sans-serif-black"
      android:text="@string/Registerhere"
      android:textColor="@color/white"
      android:textSize="24sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:text="@string/welcomeabord"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView4" />

  <EditText
      android:id="@+id/editTextTextPersonName"
      android:layout_width="275dp"
      android:layout_height="38dp"
      android:layout_marginTop="24dp"
      android:ems="10"
      android:hint="@string/firstname"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView5" />

  <Button
      android:id="@+id/button4"
      android:layout_width="301dp"
      android:layout_height="55dp"
      android:layout_marginTop="16dp"
      android:backgroundTint="@color/getstartbtncol"
      android:text="@string/signupbtn"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6" />

  <TextView
      android:id="@+id/textView6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/or"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/button4" />

</androidx.constraintlayout.widget.ConstraintLayout>
